feat: add compatibility with Spark 3.5 #3