@@ -9,23 +9,6 @@ rm -Rf $MAIN_DIR/spark-warehouse $MAIN_DIR/metastore_db
 
 TEST_NAME=$1
 
-export JDK_JAVA_OPTIONS='
---add-opens=java.base/java.lang=ALL-UNNAMED
---add-opens=java.base/java.lang.invoke=ALL-UNNAMED
---add-opens=java.base/java.lang.reflect=ALL-UNNAMED
---add-opens=java.base/java.io=ALL-UNNAMED
---add-opens=java.base/java.net=ALL-UNNAMED
---add-opens=java.base/java.nio=ALL-UNNAMED
---add-opens=java.base/java.util=ALL-UNNAMED
---add-opens=java.base/java.util.concurrent=ALL-UNNAMED
---add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
---add-opens=java.base/sun.nio.ch=ALL-UNNAMED
---add-opens=java.base/sun.nio.cs=ALL-UNNAMED
---add-opens=java.base/sun.security.action=ALL-UNNAMED
---add-opens=java.base/sun.util.calendar=ALL-UNNAMED
---add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
-'
-
 if [[ -z "$TEST_NAME" ]]; then
     echo "################################"
     echo "Executing unit tests"
